test/corpus/basics.txt
================================================================================
basic: tiny module
================================================================================

module A where

fun a = a

--------------------------------------------------------------------------------

(module
  name: (properName)
  (cont)
  (function_definition
    (expression)))

================================================================================
basic: module name with dots
================================================================================

module A.B.C.D where

--------------------------------------------------------------------------------

(module
  name: (properName)
  name: (properName)
  name: (properName)
  name: (properName)
  (cont))

================================================================================
basic: bigger module
================================================================================

module A where

fun a = a

fun a = 1

fun a = { a }

fun a = { a : 1 }

fun a = a { a = 1 }

fun a = a { a = 1 }

--------------------------------------------------------------------------------

(module
  name: (properName)
  (cont)
  (function_definition
    (expression))
  (function_definition
    (expression))
  (function_definition
    (expression))
  (function_definition
    (expression
      (expression)))
  (function_definition
    (expression
      (expression)
      (expression)))
  (function_definition
    (expression
      (expression)
      (expression))))

================================================================================
basic: data definition
================================================================================

module A where

data A = A | B | C

--------------------------------------------------------------------------------

(module
  (properName)
  (cont)
  (dataDecl
    (properName)
    (dataCtor
      (properName))
    (dataCtor
      (properName))
    (dataCtor
      (properName))
    (cont)))

================================================================================
basic: data definition with extra info
================================================================================

module A where

data A a =
  A a a
  | B a
  | C a a
  | D

--------------------------------------------------------------------------------

(module
  (properName)
  (cont)
  (dataDecl
    (properName)
    (typeVarBinding)
    (dataCtor
      (properName)
      (typeAtom)
      (typeAtom))
    (dataCtor
      (properName)
      (typeAtom))
    (dataCtor
      (properName)
      (typeAtom)
      (typeAtom))
    (dataCtor
      (properName))
    (cont)))

================================================================================
basic: type definition
================================================================================

module A where

type A = A

--------------------------------------------------------------------------------

(module
  (properName)
  (cont)
  (typeDecl
    (properName)
    (properName)))

================================================================================
basic: newtype definition
================================================================================

module A where

newtype A = A abc

--------------------------------------------------------------------------------

(module
  (properName)
  (cont)
  (newtypeDecl
    (properName)
    (properName)
    (typeVarBinding)))
